
/* Class = "UIButton"; normalTitle = "Start"; ObjectID = "3rm-qK-pAl"; */
"3rm-qK-pAl.normalTitle" = "Start";

/* Class = "UILabel"; text = "Speaking Timer helps you track your progress while practicing."; ObjectID = "9P8-D4-8XM"; */
"9P8-D4-8XM.text" = "Speaking Timer helps you track your progress while practicing.";

/* Class = "UILabel"; text = "Speaking Timer"; ObjectID = "TTa-Uk-0fY"; */
"TTa-Uk-0fY.text" = "Speaking Timer";

/* Class = "UILabel"; text = "Speaking Timer"; ObjectID = "wbl-mX-FRI"; */
"wbl-mX-FRI.text" = "Speaking Timer";

/* Class = "UIButton"; normalTitle = "Stop"; ObjectID = "UQM-eW-yqi"; */
"UQM-eW-yqi.normalTitle" = "Stop";



